chore: fix align logic

--- a/assets/index.less
+++ b/assets/index.less
@@ -44,7 +44,8 @@
     width: 0px;
     height: 0px;
     background: #000;
-    box-shadow: 0 0 0 5px black;
+    border-radius: 100vw;
+    box-shadow: 0 0 0 3px black;
     z-index: 1;
   }
 
