--- a/docs/examples/case.less
+++ b/docs/examples/case.less
@@ -1,6 +1,6 @@
-.rc-trigger-popup-placement-right {
-  border-width: 10px!important;
-}
+// .rc-trigger-popup-placement-right {
+//   border-width: 10px!important;
+// }
 
 // ======================= Popup =======================
 .case-motion {
